--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,1 @@
-google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
+Account=https://hp-test-x.azurewebsites.net/api/v1/account/api/v1/system/application
